5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1745_1527.log
== TEST (2019-05-15 14:37:28) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	t=t + 1
	q1=q1 + ( q1 * p1) / 100
	q2=q2 + (q2 * p2) / 100
	q= q1 + q2
print(q)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:26) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	t=t + 1
	x=x + ( x * p1) / 100
	y=y + (y * p2) / 100
	q= x + y
print(q)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:49) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	t=t + 1
	x=x + ( x * p1) / 100
	y=y + (y * p2) / 100
	q=x + y
print(q)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:07) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	t=t + 1
	x=x + ( x * p1) / 100
	y=y + (y * p2) / 100
	q=x + y
print(q)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:40:08) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	t=t + 1
	x=x + ( x * p1) / 100
	y=y + (y * p2) / 100
	q=x + y
print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:41:45) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	t=t + 1
	x=x + (( x * p1) / 100)
	y=y + ((y * p2) / 100)
	y1=x + y
print(y1)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:23) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2):
	t=t + 1
	x=x + (( x * p1) / 100)
	y=y + ((y * p2) / 100)
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:34) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2):
	t=t + 1
	x=x + (( x * p1) / 100)
	y=y + ((y * p2) / 100)
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:35) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2):
	t=t + 1
	x=x + (x *( p1) / 100)
	y=y + (y * (p2) / 100)
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:14) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2):
	t=t + 1
	x=x + (x *( p1) / 100)
	y=y + (y * (p2) / 100)
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:52) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1):
	t=t + 1
	x=x + (x *( p1) / 100)
	y=y + (y * (p2) / 100)
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:28) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1):
	
	x=x + (x *( p1) / 100)
	y=y + (y * (p2) / 100)
	t=t + 1

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:23) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1):
	t=t + 1
	x=(x + (x *( p1) / 100))
	y=(y + (y * (p2) / 100))
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:58) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=1
x=q1
y=q2

while (q1 > q2) and (p2 > p1):
	t=t + 1
	x=(x + (x *( p1) / 100))
	y=(y + (y * (p2) / 100))
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:33) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))

x=q1
y=q2

while (q1 > q2) and (p2 > p1):
	t=0
	t=t + 1
	x=(x + (x *( p1) / 100))
	y=(y + (y * (p2) / 100))
	

print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:57) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1):
	t=t + 1
	x=(x + (x * p1) / 100)
	y=(y + (y * p2) / 100)
	
print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:35) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) and (q2 > q1):
	t=t + 1
	x=(x + (x * p1) / 100)
	y=(y + (y * p2) / 100)
	
print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:14) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) and (q2 > q1):
	t=t + 1
	x=(x + (x * p1) / 100)
	y=(y + (y * p2) / 100)
	
print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:51) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) and (q2 > q1):
	t=t + 1
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	
	
print(t)
-- OUTPUT:
19171.13868309837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:32) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) and (q2 > q1):
	t=t + 1
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	
	
print(y)
-- OUTPUT:
6000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:23) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 < q2) and (p2 > p1) :
	t=t + 1
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	
	
print()
-- OUTPUT:
6000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:40) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 < q2) and (p2 > p1) :
	t=t + 1
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	
	
print(t)
-- OUTPUT:
6000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:03) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 < q2) and (p2 > p1) :
	t=t + 1
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	a=y + x
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:55) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 < q2) and (p2 > p1) :
	
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	t=t + 1
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:12) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 < q2) and (p2 > p1) :
	
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	t=t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:10) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (q1 > q2) and (p2 > p1) :
	
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	t=t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:39) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (p2 > p1) :
	
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	t=t + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:32:08) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (p2 > p1) :
	t=t + 1
	y=y+(y * ( p2 / 100))
	x=x+ (x * (p1 / 100))
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:33:04) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (p2 > p1) :
	t=t + 1
	x=x+(x*(p1/100))
	y=y+(y * ( p2 / 100))

	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:34:15) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (p2 > p1) :
	t=t + 1
	x=x+(x*(p1/100))
	y=y+(y * ( p2 / 100))
	p2=float(input("percentual anual de crescimento de loki :"))
	
print(p2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    p2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:35:00) 
-- CODE:
q1=int(input("quantidade inicial de forseti :"))
q2=int(input("quantidade inicial de loki :"))
p1=float(input("percentual anual de crescimento de forseti :"))
p2=float(input("percentual anual de crescimento de loki :"))
t=0
x=q1
y=q2

while (p2 > p1) :
	t=t + 1
	x=x+(x*(p1/100))
	y=y+(y * ( p2 / 100))
	
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    p2=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
